# ramses_esp

./: .gitignore  CMakeLists.txt  README.md  example_sdkconfig.esp32-c6-devkitm-1  partitions - Copy.csv  partitions.csv  platformio.ini  ramses_esp_c6.code-workspace  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-c6-devkitm-1  sdkconfig.esp32-c6-devkitm-1.old  sdkconfig_example.local
.github/workflows/: build.yml
components/: README
components/cc1101/: CMakeLists.txt  Kconfig.projbuild  cc1101.c  cc1101_config.ini  cc1101_param.c  cc_const.h
components/command/: cmd.c
components/frame/: CMakeLists.txt  Kconfig.projbuild  frame.c  uart.c  uart.h
components/gateway/: gateway.c  gateway.ini
components/message/: message.c
components/ramses-buttons/: ramses_buttons.c
components/ramses-debug/: Kconfig.projbuild  debug_cmd.c
components/ramses-led/: Kconfig.projbuild  ramses_led.c
components/ramses-mqtt/: ramses-mqtt.c
components/ramses-network/: Kconfig.projbuild  ramses_network.c  ramses_ota.c  ramses_sntp.c  ramses_wifi.c
components/ramses-nvs/: ramses-nvs.ini  ramses_nvs.c
lib/cc1101/: cc1101.c
lib/frame/: frame.c  frame.ini  uart.c
lib/gateway/: gateway.c
lib/message/: message.c  message.ini
lib/ramses-buttons/: ramses_buttons.c
lib/ramses-debug/: debug.ini  debug_cmd.c
lib/ramses-led/: ramses-led.ini  ramses_led.c
lib/ramses-mqtt/: ramses-mqtt.c  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild
src/: CMakeLists.txt  Kconfig.projbuild  host.c  host.h  idf_component.yml  main.c  main.ini  platform.c  radio.c  radio.h
(+5 files in other folders)
